fix overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,6 +24,7 @@ Global Styles
 
 body {
     font-family: "Kanit", sans-serif;
+    overflow-x: hidden;
 }
 
 h1,
